# ESP32MotiondetectionWIP

./: LICENSE  README.md
desktop-app/: CMakeLists.txt
desktop-app/scripts/: build_windows.bat
desktop-app/src/: Calibration.cpp  Calibration.h  GraphWidget.cpp  GraphWidget.h  MainWindow.cpp  MainWindow.h  MotionDetector.cpp  MotionDetector.h  Packet.h  SerialWorker.cpp  SerialWorker.h  main.cpp
firmware/esp32_csi_capture/: board_config.h  esp32_csi_capture.ino
